Remove unused code, expand testing